@@ -1,3 +1,12 @@
+2005-06-10  Philippe Gerum  <rpm@xenomai.org>
+
+	* skins/posix/thread.c: Add pthread_set_mode_np() for changing the
+	shield state and arming the switch trap signal.
+
+	* nucleus/pod.c: Survey page faults over shadow contexts to track
+	down memory locking problems. /proc/rtai/stats displays the new PF
+	counter accordingly.
+
 2005-06-10  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>
 
 	* skins/posix/syscall.c (__pthread_create): Destroy thread when
